@@ -74,7 +74,7 @@ Improvements
 - Improved compatibility with Cython_ 0.19 (see :issue:`220` and
   :issue:`221`)
 
-- Improved compatibility with numexpr_ 2.1
+- Improved compatibility with numexpr_ 2.1 (see also :issue:`199`)
 
 - Improved compatibility with development versions of numpy_
   (see :issue:`193`)
@@ -128,6 +128,11 @@ Many deprecated features and support for obsolete modules has been dropped:
 - The deprecated :exc:`exceptions.Incompat16Warning` exception has been
   removed
 
+- The :meth:`File.create_external_link` method no more has a keyword
+  parameter named *warn16incompat*.  It was deprecated since PyTables 2.4.
+
+Moreover:
+
 - The `__version__` module constants has been removed from almost all the
   modules (it was no more used after the switch to Git).
   Of course the package level constant (:data:`tables.__version__`) still
@@ -139,8 +144,9 @@ Many deprecated features and support for obsolete modules has been dropped:
   in favour of :data:`parameters.MAX_BLOSC_THREADS` and
   :data:`parameters.MAX_NUMEXPR_THREADS` (closes :issue:`147`).
 
-- The :meth:`File.create_external_link` method no more has a keyword
-  parameter named *warn16incompat*.  It was deprecated since PyTables 2.4.
+- The :func:`conditions.compile_condition` function no more has a *copycols*
+  argument, it was no more necessary since Numexpr_ 1.3.1.
+  Closes :issue:`117`.
 
 
 Other possibly incompatible changes
